# Instala-es-Prediais

Back/: README.md  pyproject.toml
Back/source/trabalho_a4/: api_service.py  handler.py
Back/source/trabalho_a4/static/: index.html
Front/: index.html
